# BA_cron_jobs

./: .gitignore
stressless_dogs/: .flake8  pyproject.toml  setup.py
stressless_dogs/ba_sd_cron/database/: interfaces.py
stressless_dogs/ba_sd_cron/meta/: meta_campaigns.py  sync_meta_campaign_last_2_days.py  sync_meta_campaign_with_interval.py
